fixed header alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,22 +1,30 @@
 * {
-    margin: auto;
-    padding: auto;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+    /* text-align: center;
     align-items: center;
+    margin: auto; */
 }
 
 header {
+    /* position: fixed;
+    display: inline; */
     position: fixed;
-    display: inline;
+    top: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 header h1 {
     font-size: 50px;
 }
 
-a {
-    color: black;
+
+figure {
+    text-align: center;
+    align-items: center;
+    margin: auto;
 }
 
 .container {
@@ -24,6 +32,9 @@ a {
     background-color: lightblue;
     padding: 20px;
     width: 800px;
+    text-align: center;
+    align-items: center;
+    margin: auto;
 }
 
 .button {
@@ -35,4 +46,7 @@ a {
 
 #footer {
     font-size: 10px;
+    text-align: center;
+    align-items: center;
+    margin: auto;
 }
